remove gattle big hammer

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -213,6 +213,7 @@ CP14PlateIron: CP14Plate
 
 #2025-22-01
 CP14BaseLightHammer: CP14ModularIronHammer
+CP14BaseBattleHammer: CP14ModularIronHammer
 
 
 
