--- a/Resources/Prototypes/_CP14/tools.yml
+++ b/Resources/Prototypes/_CP14/tools.yml
@@ -9,5 +9,5 @@
   id: CP14Hammering
   name: cp14-tool-quality-hammering-name
   toolName: cp14-tool-quality-hammering-tool-name
-  spawn: CP14BaseLightHammer
-  icon: { sprite: _CP14/Objects/Weapons/Melee/LightHammer/lightHammer.rsi, state: icon}
+  spawn: CP14ModularIronHammer
+  icon: { sprite: _CP14/Objects/ModularTools/Blade/Hammer/metall_hammer.rsi, state: tool}
