increase roles playtime requirements

--- a/Resources/Prototypes/_CP14/Roles/Jobs/Bank/banker.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Bank/banker.yml
@@ -10,6 +10,9 @@
   - !type:CP14AddKnowledgeSpecial
     knowledge:
     - WoodWork
+  requirements:
+    - !type:OverallPlaytimeRequirement
+      time: 3600 # 1 hours
 
 - type: startingGear
   id: CP14BankerGear
