--- a/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard_commander.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Guard/guard_commander.yml
@@ -15,6 +15,10 @@
   - !type:CP14AddKnowledgeSpecial
     knowledge:
     - WoodWork
+  requirements:
+    - !type:DepartmentTimeRequirement
+      department: CP14Guard
+      time: 3600 # 1 hours
 
 - type: startingGear
   id: CP14GuardCommanderGear
