--- a/Resources/Audio/_CP14/Animals/attributions.yml
+++ b/Resources/Audio/_CP14/Animals/attributions.yml
@@ -57,3 +57,9 @@
   license: "CC0-1.0"
   copyright: 'by egomassive of Freesound.org.'
   source: "https://freesound.org/people/egomassive/sounds/536728/"
+
+
+- files: ["ghost_ambi.ogg"]
+  license: "CC0-1.0"
+  copyright: 'by Litruv of Freesound.org.'
+  source: "https://freesound.org/people/Litruv/sounds/175944/"
