--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/monster.yml
@@ -218,8 +218,206 @@
         behaviors:
           - !type:DoActsBehavior
             acts: [ "Destruction" ]
-
   - type: MeleeSound
     soundGroups:
       Burn:
         path: /Audio/_CP14/Animals/swarm_hit.ogg
+
+- type: entity
+  id: CP14MobMonsterInvisibleWhistler
+  parent: SimpleMobBase
+  name: invisible whistler
+  description: A monster invisible to the ordinary eye, adoring to devour victims consumed by fear and misunderstanding.
+  categories: [ ForkFiltered ]
+  components:
+  - type: HTN
+    rootTask:
+      task: SimpleRangedHostileCompound
+    blackboard:
+      NavSmash: !type:Bool
+        true
+      VisionRadius: !type:Single
+        14
+      AggroVisionRadius: !type:Single
+        12
+  - type: NpcFactionMember
+    factions:
+    - CP14Monster
+  - type: NPCUseActionOnTarget
+    actionId: CP14ActionMoleSpellEyeOfStrength
+  - type: Sprite
+    drawdepth: Mobs
+    layers:
+    - map: ["enum.DamageStateVisualLayers.Base"]
+      sprite: _CP14/Mobs/Monster/invisible_whistler.rsi #Temporary monster sprite, you need your own
+      state: live
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.35
+        density: 300
+        mask:
+        - MobMask
+        layer:
+        - MobLayer
+  - type: ReplacementAccent
+    accent: xeno
+  - type: CombatMode
+  - type: MeleeWeapon
+    angle: 0
+    animation: WeaponArcBite
+    damage:
+      types:
+        Piercing: 3
+        Structural: 3
+  - type: Damageable
+    damageContainer: Biological
+  - type: Appearance
+  - type: Body
+    prototype: Animal
+  - type: MobThresholds
+    thresholds:
+      0: Alive
+      30: Dead
+  - type: SlowOnDamage
+    speedModifierThresholds:
+      25: 0.8
+  - type: Stamina
+    critThreshold: 200
+  - type: MovementSpeedModifier
+    baseWalkSpeed: 2
+    baseSprintSpeed: 2
+  - type: DamageStateVisuals
+    states:
+      Alive:
+        Base: live
+      Dead:
+        Base: dead
+  - type: Butcherable
+    spawned:
+    - id: CP14FoodMeatLamb # to replace the other meat
+      amount: 4
+    - id: CP14PartsMonsterGlands
+      amount: 1
+      prob: 0.4
+  - type: Bloodstream
+    bloodMaxVolume: 200
+    bloodReagent: CP14Blood
+  - type: Grammar
+    attributes:
+      gender: epicene
+  - type: BasicEntityAmmoProvider
+    proto: CP14SpikeWhistle
+    capacity: 1
+    count: 1
+  - type: RechargeBasicEntityAmmo
+    showExamineText: false
+    rechargeSound: null
+    rechargeCooldown: 0.25
+  - type: Gun
+    fireRate: 0.25
+    useKey: false
+    showExamineText: false
+    selectedMode: FullAuto
+    availableModes:
+      - FullAuto
+    soundGunshot:
+      collection: Whistles
+  - type: Stealth
+    enabledOnDeath: false
+    maxVisibility: 1
+  - type: StealthOnMove
+    passiveVisibilityRate: -0.40
+    movementVisibilityRate: 0.10
+  - type: CP14MagicCasterSlowdown
+  - type: CP14MagicEnergyContainer
+    magicAlert: CP14MagicEnergy
+    maxEnergy: 150
+    energy: 150
+  - type: CP14MagicEnergyDraw
+    energy: 2
+    delay: 4
+  - type: Tag
+    tags:
+      - CP14Mosquito
+
+- type: entity
+  id: CP14ActionMoleSpellEyeOfStrength
+  name: Eye of strength
+  description: Make a subterranean leap, quickly approaching the victim.
+  components:
+  - type: CP14MagicEffectCastSlowdown
+    speedMultiplier: -1.0
+  - type: CP14MagicEffect
+    manaCost: 10
+    telegraphyEffects:
+    - !type:CP14SpellSpawnEntityOnTarget
+      spawns:
+      - CP14ImpactEffectEye
+    effects:
+    - !type:CP14SpellSpawnEntityOnTarget
+      spawns:
+      - CP14WallSpawnEyeOfStrength
+  - type: EntityWorldTargetAction
+    useDelay: 8
+    range: 10
+    checkCanAccess: false
+    itemIconStyle: BigAction
+    sound: !type:SoundPathSpecifier
+      path: /Audio/Effects/gib3.ogg
+    icon:
+      sprite: _CP14/Effects/Magic/spells_icons_monster.rsi
+      state: subterranean_leap
+    event: !type:CP14DelayedEntityWorldTargetActionEvent
+      cooldown: 4
+      hidden: true
+      breakOnMove: false
+    raiseOnUser: true
+
+- type: entity
+  id: CP14WallSpawnEyeOfStrength
+  parent:
+  - BaseMob  
+  - MobCombat
+  - FlyingMobBase
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: HTN
+    rootTask:
+      task: MeleeCombatCompound
+  - type: NpcFactionMember
+    factions:
+    - CP14Monster
+  - type: MovementSpeedModifier
+    baseWalkSpeed: 0
+    baseSprintSpeed: 0
+  - type: Sprite
+    sprite: Objects/Weapons/Guns/Projectiles/magic.rsi
+    layers:
+    - state: magicm
+      shader: unshaded
+  - type: MeleeWeapon
+    angle: 0
+    range: 3
+    attackRate: 0.6
+    damage:
+      types:
+        Blunt: 4
+  - type: StaminaDamageOnHit
+    damage: 15
+  - type: MeleeThrowOnHit
+    lifetime: 7
+    speed: 80
+  - type: TimedDespawn
+    lifetime: 1
+
+- type: entity
+  id: CP14ImpactEffectEye
+  parent: CP14BaseMagicImpact
+  categories: [ HideSpawnMenu ]
+  components:
+  - type: Sprite
+    layers:
+    - state: particles_up
