--- a/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/alchemist.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/alchemist.yml
@@ -12,7 +12,7 @@
     - WoodWork
   requirements:
     - !type:RoleTimeRequirement
-      role: CP14Apprentice
+      role: CP14JobApprentice
       time: 3600 # 1 hours
 
 - type: startingGear
