--- a/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/dough.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Consumable/Food/dough.yml
@@ -24,7 +24,7 @@
         - ReagentId: UncookedAnimalProteins
           Quantity: 2
   - type: SliceableFood
-    count: 5
+    count: 4
     slice: CP14FoodDoughMedium
   - type: CP14TemperatureTransformation
     entries:
@@ -50,7 +50,7 @@
         - ReagentId: Protein
           Quantity: 2
   - type: SliceableFood
-    count: 5
+    count: 4
     slice: CP14FoodBreadSlice
   - type: CP14TemperatureTransformation
     entries:
@@ -68,12 +68,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6 # 1/5 bread
+        maxVol: 7 # 1/4 bread
         reagents:
         - ReagentId: Nutriment
-          Quantity: 4
+          Quantity: 5
         - ReagentId: Protein
-          Quantity: 0.4
+          Quantity: 0.5
   - type: CP14TemperatureTransformation
     entries:
     - temperatureRange: 400, 500
@@ -82,7 +82,7 @@
 - type: entity
   parent: FoodInjectableBase
   id: CP14FoodDoughMedium
-  name: Medium piece of dough.
+  name: medium piece of dough
   categories: [ ForkFiltered ]
   components:
   - type: Item
@@ -97,12 +97,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6 # 1/5 large dough
+        maxVol: 7 # 1/4 large dough
         reagents:
         - ReagentId: Nutriment
-          Quantity: 4
+          Quantity: 5.2
         - ReagentId: UncookedAnimalProteins
-          Quantity: 0.4
+          Quantity: 0.5
   - type: CP14TemperatureTransformation
     entries:
     - temperatureRange: 400, 500
@@ -120,12 +120,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6 # 1/5 large dough
+        maxVol: 6 # 1/4 large dough
         reagents:
         - ReagentId: Nutriment
-          Quantity: 4
+          Quantity: 5.2
         - ReagentId: Protein
-          Quantity: 0.4
+          Quantity: 0.5
   - type: SliceableFood
     count: 2
     slice: CP14FoodBreadBunSlice
@@ -146,12 +146,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 3 # 1/2 bun
+        maxVol: 4 # 1/2 bun
         reagents:
         - ReagentId: Nutriment
-          Quantity: 2
+          Quantity: 2.6
         - ReagentId: Protein
-          Quantity: 0.2
+          Quantity: 0.25
   - type: CP14TemperatureTransformation
     entries:
     - temperatureRange: 400, 500
@@ -169,12 +169,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6 # 1/5 large dough
+        maxVol: 7 # 1/4 large dough
         reagents:
         - ReagentId: Nutriment
-          Quantity: 4
+          Quantity: 5.2
         - ReagentId: UncookedAnimalProteins
-          Quantity: 0.4
+          Quantity: 0.5
   - type: CP14TemperatureTransformation
     entries:
     - temperatureRange: 400, 500
