setup guildmaster job

--- a/Resources/Prototypes/_CP14/Roles/Jobs/departments.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/departments.yml
@@ -8,6 +8,7 @@
   roles:
   - CP14Commandant
   - CP14GuardCommander
+  - CP14Guildmaster
 
 - type: department
   id: CP14Guard
@@ -36,6 +37,7 @@
   weight: 0
   color: "#588151"
   roles:
+  - CP14Guildmaster
   - CP14Apprentice
   - CP14Adventurer
   - CP14Alchemist
