comoss tavern update

--- a/Resources/Prototypes/_CP14/LockCategories/lockTypes.yml
+++ b/Resources/Prototypes/_CP14/LockCategories/lockTypes.yml
@@ -93,6 +93,11 @@
   complexity: 3
   name: cp14-lock-shape-blacksmith2
 
+- type: CP14LockType
+  id: Guildmaster
+  complexity: 5
+  name: cp14-lock-shape-guildmaster
+
 # Personal house
 
 - type: CP14LockType
