--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/jobs.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/jobs.yml
@@ -71,20 +71,6 @@
 # Mercenary
 
 - type: entity
-  id: CP14SpawnPointApprentice
-  parent: CP14SpawnPointJobBase
-  name: apprentice
-  categories:
-  - Spawner
-  components:
-  - type: SpawnPoint
-    job_id: CP14Apprentice
-  - type: Sprite
-    layers:
-      - state: green
-      - state: workman #TODO Replace
-
-- type: entity
   id: CP14SpawnPointAdventurer
   parent: CP14SpawnPointJobBase
   name: adventurer
@@ -97,6 +83,37 @@
     layers:
       - state: green
       - state: adventurer
+
+- type: entity
+  id: CP14SpawnPointGuildmaster
+  parent: CP14SpawnPointJobBase
+  name: guildmaster
+  categories:
+  - Spawner
+  components:
+  - type: SpawnPoint
+    job_id: CP14Guildmaster
+  - type: Sprite
+    layers:
+      - state: green
+      - state: adventurer #TODO
+        color: red
+
+# Artisans
+
+- type: entity
+  id: CP14SpawnPointApprentice
+  parent: CP14SpawnPointJobBase
+  name: apprentice
+  categories:
+  - Spawner
+  components:
+  - type: SpawnPoint
+    job_id: CP14Apprentice
+  - type: Sprite
+    layers:
+      - state: green
+      - state: workman #TODO Replace
 
 - type: entity
   id: CP14SpawnPointAlchemist
