--- a/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/guildmaster.yml
+++ b/Resources/Prototypes/_CP14/Roles/Jobs/Mercenary/guildmaster.yml
@@ -28,4 +28,4 @@
     - CP14EnergyCrystalSmall
   equipment:
     belt1: CP14WalletFilledTest
-    keys: CP14KeyRingInnkeeper
+    #keys: CP14KeyRingInnkeeper
