--- a/Resources/Prototypes/_CP14/Entities/Objects/Keys/blacksmith.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Keys/blacksmith.yml
@@ -13,3 +13,11 @@
   components:
   - type: CP14Key
     autoGenerateShape: Blacksmith1
+    
+- type: entity
+  parent: CP14BaseKey
+  id: CP14KeyBlacksmith2
+  suffix: Blacksmith 2
+  components:
+  - type: CP14Key
+    autoGenerateShape: Blacksmith2
