--- a/Resources/Prototypes/_CP14/Entities/Markers/Spawners/demiplane_rifts.yml
+++ b/Resources/Prototypes/_CP14/Entities/Markers/Spawners/demiplane_rifts.yml
@@ -85,7 +85,6 @@
       children:
       - id: CP14MobDinoSmallHydra
 
-
 - type: entity
   parent: CP14BaseMobGroupSpawner
   id: CP14MobGroupSpawnerMosquito
@@ -99,3 +98,17 @@
         range: 2, 3
       children:
       - id: CP14MobMonsterMosquito
+
+- type: entity
+  parent: CP14BaseMobGroupSpawner
+  id: CP14MobGroupSpawnerRabbits
+  suffix: 2-3 Rabbits
+  components:
+  - type: EntityTableSpawner
+    deleteSpawnerAfterSpawn: false
+    offset: 1
+    table: !type:GroupSelector
+      rolls: !type:RangeNumberSelector
+        range: 2, 3
+      children:
+      - id: CP14MobRabbit
