--- a/Resources/Prototypes/_CP14/GameRules/events.yml
+++ b/Resources/Prototypes/_CP14/GameRules/events.yml
@@ -12,21 +12,10 @@
   id: CP14BasicCalmEventsTable
   table: !type:AllSelector
     children:
-    #- id: CP14ClosetSkeleton
     - id: CP14ZombiesSpawn
     - id: CP14HydrasSpawn
     - id: CP14MosquitoSpawn
-
-#- type: entity
-#  parent: CP14BaseGameRule
-#  id: CP14ClosetSkeleton
-#  components:
-#  - type: StationEvent
-#    weight: 5
-#    duration: 1
-#    minimumPlayers: 10
-#  - type: RandomEntityStorageSpawnRule
-#    prototype: CP14MobUndeadSkeletonCloset
+    - id: CP14RabbitsSpawn
 
 - type: entity
   parent: CP14BaseStationEventShortDelay
@@ -43,7 +32,7 @@
   - type: VentCrittersRule
     entries:
     - id: CP14MobGroupSpawnerZombie
-      prob: 0.05
+      prob: 0.08
 
 - type: entity
   parent: CP14BaseStationEventShortDelay
@@ -60,7 +49,7 @@
   - type: VentCrittersRule
     entries:
     - id: CP14MobGroupSpawnerHydras
-      prob: 0.05
+      prob: 0.08
 
 - type: entity
   parent: CP14BaseStationEventShortDelay
@@ -77,4 +66,21 @@
   - type: VentCrittersRule
     entries:
     - id: CP14MobGroupSpawnerMosquito
-      prob: 0.05
+      prob: 0.08
+
+- type: entity
+  parent: CP14BaseStationEventShortDelay
+  id: CP14RabbitsSpawn
+  components:
+  - type: StationEvent
+    startAnnouncement: cp14-event-announcement-demiplane-outbreak
+    startAudio:
+      path: /Audio/_CP14/Ambience/event_boom.ogg
+    earliestStart: 20
+    minimumPlayers: 10
+    weight: 5
+    duration: 60
+  - type: VentCrittersRule
+    entries:
+    - id: CP14MobGroupSpawnerRabbits
+      prob: 0.08
