--- a/Resources/Textures/_CP14/Tiles/attributions.yml
+++ b/Resources/Textures/_CP14/Tiles/attributions.yml
@@ -12,7 +12,7 @@
   source: "https://github.com/crystallpunk-14/crystall-punk-14/"
 
 - files: ["stonebricks.png", "stonebricks_small_carved_1.png", "stonebricks_small_carved_2.png", "stonebricks_square_carved.png"]
-  license: "CLA"
+  license: "All right reserved"
   copyright: "Created by Jaraten"
   source: "https://github.com/crystallpunk-14/crystall-punk-14/"
 
@@ -27,6 +27,6 @@
   source: "https://github.com/tgstation/tgstation/"
 
 - files: ["woodplanks_big_burned.png", "woodplanks_burned.png", "woodplanks_cruciform_burned.png", "woodplanks_stairways_burned.png"]
-  license: "CLA"
+  license: "All right reserved"
   copyright: "Created by Jaraten"
   source: "https://github.com/crystallpunk-14/crystall-punk-14/"
