--- a/Resources/Prototypes/_CP14/Entities/Mobs/Species/human.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Species/human.yml
@@ -22,6 +22,11 @@
   - type: Inventory
     templateId: CP14Human
     femaleDisplacements:
+      outerClothing:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Human/displacement.rsi
+            state: female_cloak
       cloak:
         sizeMaps:
           32:
@@ -49,6 +54,11 @@
     templateId: CP14Human
     femaleDisplacements:
       cloak:
+        sizeMaps:
+          32:
+            sprite: _CP14/Mobs/Species/Human/displacement.rsi
+            state: female_cloak
+      outerClothing:
         sizeMaps:
           32:
             sprite: _CP14/Mobs/Species/Human/displacement.rsi
