--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -219,9 +219,9 @@ CP14BaseBattleHammer: CP14ModularIronHammer
 CP14CrystalRubiesSmall: CP14CrystalElementalFireSmall
 CP14CrystalRubiesMedium: CP14CrystalElementalFireMedium
 CP14CrystalRubiesBig: CP14CrystalElementalFireBig
-CP14CrystalTopazesSmall: null
-CP14CrystalTopazesMedium: null
-CP14CrystalTopazesBig: null
+CP14CrystalTopazesSmall: CP14CrystalElementalElectricSmall
+CP14CrystalTopazesMedium: CP14CrystalElementalElectricMedium
+CP14CrystalTopazesBig: CP14CrystalElementalElectricBig
 CP14CrystalEmeraldsSmall: CP14CrystalElementalHealingSmall
 CP14CrystalEmeraldsMedium: CP14CrystalElementalHealingMedium
 CP14CrystalEmeraldsBig: CP14CrystalElementalHealingBig
@@ -235,6 +235,7 @@ CP14CrystalDiamondsSmall: CP14CrystalElementalLightSmall
 CP14CrystalDiamondsMedium: CP14CrystalElementalLightMedium
 CP14CrystalDiamondsBig: CP14CrystalElementalLightBig
 
+CP14QuartzCrystal: null
 CP14QuartzShard: null
 
 # <---> CrystallEdge migration zone end
